# Embedded-Computer-Vision-System-Project

./: .gitignore  Gender_and_Age_Detection .ipynb  Inference.py  README.md  TrainModel.py  pyproject.toml  requirement.txt  requirements.txt  utils.py
AndroidCode/: build.gradle  local.properties  settings.gradle
AndroidCode/app/src/androidTest/java/com/example/androidpythonopencv/: ExampleInstrumentedTest.java
AndroidCode/app/src/main/: AndroidManifest.xml
AndroidCode/app/src/main/java/com/example/androidpythonopencv/: MainActivity.java
AndroidCode/app/src/main/python/: age_gender.py
AndroidCode/app/src/main/res/layout/: activity_main.xml
AndroidCode/app/src/main/res/values/: strings.xml  themes.xml
AndroidCode/app/src/main/res/values-night/: themes.xml
AndroidCode/app/src/test/java/com/example/androidpythonopencv/: ExampleUnitTest.java
AndroidCode/gradle/wrapper/: gradle-wrapper.properties
RefProgram/: Age_Estimation_(W1).ipynb  Gender_Estimation_(W2).ipynb  model_age_q.tflite  model_gender.h5  model_gender_nonq.tflite  model_gender_q.tflite
src/: face.py  face_train.py  face_video_demo.py  utils.py  visualization.py
