[tool.poetry]
package-mode = false

[project]
name = "embedded-computer-vision-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Quirkyalone1216",email = "chen.ken1216@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "absl-py (==0.15.0)",
    "astunparse (==1.6.3)",
    "cachetools (==5.5.2)",
    "certifi (==2025.4.26)",
    "charset-normalizer (==3.4.2)",
    "contourpy (==1.1.1)",
    "cycler (==0.12.1)",
    "dlib (==19.24.9)",
    "filelock (==3.13.1)",
    "flatbuffers (==1.12)",
    "fonttools (==4.57.0)",
    "fsspec (==2024.6.1)",
    "gast (==0.4.0)",
    "google-auth (==2.40.2)",
    "google-auth-oauthlib (==1.0.0)",
    "google-pasta (==0.2.0)",
    "grpcio (==1.70.0)",
    "h5py (==3.1.0)",
    "idna (==3.10)",
    "importlib-metadata (==8.5.0)",
    "importlib-resources (==6.4.5)",
    "imutils (==0.5.4)",
    "jinja2 (==3.1.4)",
    "keras (==2.15.0)",
    "kiwisolver (==1.4.7)",
    "libclang (==18.1.1)",
    "markdown (==3.7)",
    "markupsafe (==2.1.5)",
    "matplotlib (==3.7.5)",
    "mpmath (==1.3.0)",
    "networkx (==3.0)",
    "oauthlib (==3.2.2)",
    "opencv-python (==4.11.0.86)",
    "opt-einsum (==3.3.0)",
    "packaging (==25.0)",
    "pandas (==2.0.3)",
    "pillow (==10.4.0)",
    "protobuf (==3.20.1)",
    "pyasn1 (==0.6.1)",
    "pyasn1-modules (==0.4.2)",
    "pyparsing (==3.1.4)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "requests (==2.32.3)",
    "requests-oauthlib (==2.0.0)",
    "rsa (==4.9.1)",
    "six (==1.15.0)",
    "sympy (==1.13.3)",
    "tensorboard (==2.14.0)",
    "tensorboard-data-server (==0.7.2)",
    "tensorflow-estimator (==2.15.0)",
    "termcolor (==1.1.0)",
    "typing-extensions (==3.7.4.3)",
    "tzdata (==2025.2)",
    "urllib3 (==2.2.3)",
    "werkzeug (==3.0.6)",
    "wrapt (==1.12.1)",
    "zipp (==3.20.2)",
    "clang (==5.0)",
    "keras-preprocessing (==1.1.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
